<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yota Task</string>
    <string name="items_list_loading">Загрузка товаров…</string>
    <string name="items_list_error">Произошла ошибка при загрузке товаров</string>
    <string name="try_again_button">Попробовать еще раз</string>
    <string name="items_list_empty">Список товаров пуст</string>
    <string name="items_list_content_ui_add_to_cart_button">Добавить в корзину</string>
    <string name="items_list_content_ui_total_sum">Итого: %s</string>
    <string name="main_cart_menu_item_empty_title">В корзине пусто</string>

    <string name="cart_send_order_button">Отправить заказ</string>
    <string name="cart_item_remove_button">Удалить</string>
    <string name="cart_item_price">Цена: %s</string>
    <string name="cart_item_quantity">Количество: %s</string>
    <string name="cart_item_total_sum">Итого: %s</string>

    <string name="order_email_subject">Заказ</string>
    <string name="order_email_body">Номер телефона: %1$s, email: %2$s</string>
    <string name="order_email_no_phone_number">не определен</string>
    <string name="order_email_no_user_email">не определен</string>
    <string name="order_email_can_not_create_order_file">Не удалось сохранить файл заказа</string>

    <string name="order_email_chooser_dialog_title">Отправка заказа через email</string>
</resources>
