<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/items_list_loading_ui"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/items_list_loading"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/items_list_error_ui"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/items_list_error"/>

        <Button
            android:id="@+id/items_list_error_try_again_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/try_again_button"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/items_list_empty_ui"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/items_list_empty"/>

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/items_list_content_ui"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/items_list_content_ui_bottom_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/items_list_content_ui_total_sum_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                tools:text="Total: 2587 rub"/>

            <Button
                android:id="@+id/items_list_content_ui_add_to_cart_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/items_list_content_ui_add_to_cart_button"
                tools:ignore="RtlHardcoded"/>

        </LinearLayout>

        <View
            android:id="@+id/items_list_content_ui_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#666666"
            android:layout_above="@id/items_list_content_ui_bottom_block"/>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/items_list_content_ui_recycler_view"
            android:layout_above="@id/items_list_content_ui_divider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"/>

    </RelativeLayout>

</FrameLayout>